# happy-study

./: .cruft.json  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  tasks.py
.github/workflows/: make.Dockerfile  push.yaml
src/happystudy/: __init__.py  __main__.py  cli.py  log.py  settings.py
tests/: __init__.py  test_cli.py  test_pingpong.py
