[project]
name = "happystudy"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dave Singer", email = "dave.singer@einara.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.13.1",
]

[project.scripts]
happystudy = "happystudy:cli.app"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
[dependency-groups]
dev = [
    "invoke>=2.2.1",
    "pytest>=9.0.2",
    "semver>=3.0.4",
]
